--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,48 +18,27 @@ jobs:
       contents: read
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           push: true
           tags: ttbb/pulsar:nake
           platforms: linux/amd64,linux/arm64
       - name: Save Docker Images
         run: docker pull ttbb/pulsar:nake;docker save ttbb/pulsar:nake -o pulsar-nake.tar.gz
-      - uses: dev-drprasad/delete-tag-and-release@v0.2.0
+      - name: Release
+        uses: shoothzj/latest-release-action@v1
         with:
-          delete_release: true
-          tag_name: latest_docker_image
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
-
-      - name: Tag release
-        uses: tvdias/github-tagger@v0.0.2
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          tag: latest_docker_image
-
-      # Creates the new release with the binary as a release asset.
-      # If the previous Action was skipped, then this keeps the same tag as the
-      # previous release.
-      - name: Create new release
-        uses: softprops/action-gh-release@v1
-        with:
-          body: "Latest docker image"
-          name: "latest docker image"
-          tag_name: latest_docker_image
           files: pulsar-nake.tar.gz
-          draft: false
-          prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
